core/unpackaged/main/default/objects/dlrs__UserNotification__e/dlrs__UserNotification__e.object-meta.xml
<CustomObject>
    <description>Channel to send updates to users from async actions</description>
    <label>User Notification</label>
    <pluralLabel>User Notifications</pluralLabel>
</CustomObject>