core/unpackaged/main/default/objects/dlrs__UserNotification__e/fields/dlrs__Payload__c.field-meta.xml
<CustomField>
    <fullName>dlrs__Payload__c</fullName>
    <description>JSON Payload Body</description>
    <label>Payload</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>