core/unpackaged/main/default/objects/dlrs__UserNotification__e/fields/dlrs__Recipient__c.field-meta.xml
<CustomField>
    <fullName>dlrs__Recipient__c</fullName>
    <defaultValue>$User.Id</defaultValue>
    <description>Target User this event is intended to be received by</description>
    <label>Recipient</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>