core/unpackaged/main/default/objects/dlrs__UserNotification__e/fields/dlrs__Type__c.field-meta.xml
<CustomField>
    <fullName>dlrs__Type__c</fullName>
    <description>Categorical type, one of the following
DeploymentResult</description>
    <label>Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>